cursorpointer & traySummary paragraph alignment fix

--- a/app/less/common.less
+++ b/app/less/common.less
@@ -432,6 +432,7 @@ p {
 	right: 0;
 	padding: 15px;
 	color: @grayLighter;
+	cursor: pointer;
 	&:before {
 		content: "\e60a";
 		font-family: "Homicons";
@@ -810,6 +811,7 @@ p {
 	display: table-cell;
 	position: relative;
 	padding: 10px 30px 8px 5px;
+	cursor: pointer;
 
 	h3 {
 		font-size: 18px;
