--- a/app/less/views/info.less
+++ b/app/less/views/info.less
@@ -116,7 +116,7 @@
   a, p {
     margin: 0 !important;
     padding: 10px 0 8px !important;
-    display: inline-block;
+    display: block;
   }
 }
 
@@ -165,6 +165,7 @@
   color: @white;
   // text-shadow: 0 1px 1px rgba(255,255,255,0.15);
   border-bottom: 1px solid rgba(0,0,0,0.2);
+  cursor: pointer;
   &:last-child {
     border-bottom: none;
   }
