--- a/app/less/views/store-home.less
+++ b/app/less/views/store-home.less
@@ -40,6 +40,7 @@
 
 #storeMessage {
   border-top: 1px solid @onNoteColor50;
+  cursor: pointer;
   p {
     margin: 10px 0 0;
     padding: 10px 15px 0;
