--- a/app/less/views/store-selection.less
+++ b/app/less/views/store-selection.less
@@ -33,6 +33,7 @@
     margin-bottom: 10px;
     height: 80px;
     width: 80px;
+    cursor: pointer;
 
     img {
       .img-circle;
